<resources>
    <string name="app_name">CheemsTour</string>
    <string name="view_map">View map</string>
    <string name="form_name">Name:</string>
    <string name="form_city">City:</string>
    <string name="form_latitude">Latitude:</string>
    <string name="form_longitude">Longitude:</string>
    <string name="btn_save">Save</string>
    <string name="open_form">Add location</string>
    <string name="trip_details">Trip Details</string>
    <string name="place_name">Destination name</string>
    <string name="city_state">City</string>
    <string name="loading_weather">Loading weather...</string>
    <string name="edit_btn">Edit information</string>
    <string name="delete_btn">Delete</string>
    <string name="humidity_txt">Humidity:</string>
    <string name="wind_txt">Wind:</string>
    <string name="local_time">Local time:</string>
    <string name="sunrise_txt">Sunrise:</string>
    <string name="sunset_txt">Sunset:</string>
    <string name="data_unvalid_form">Invalid Data</string>
    <string name="save_msg">Save!</string>
    <string name="update_msg">Updated</string>
    <string name="drag_msg">Drag me :D</string>
    <string name="update_btn">Update</string>
    <string name="location_set_msg">Location set</string>
    <string name="weather_not_available">Weather data not available</string>
    <string name="north_wind">North</string>
    <string name="wind_northeast">Northeast</string>
    <string name="wind_east">East</string>
    <string name="wind_southeast">Southeast</string>
    <string name="wind_south">South</string>
    <string name="wind_southwest">Southwest</string>
    <string name="wind_west">West</string>
    <string name="wind_northwest">Northwest</string>
    <string name="trip_canceled_msg">Trip deleted</string>
    <string name="not_deleted">It could not be deleted :(</string>
    <string name="temp_max">Max:</string>
    <string name="temp_min">Min:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
</resources>